
===============================================================================
Tag Creator: njn01
Tag Date:    1  November 2009
Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20091101
Tag Testing:  
            
Tag Summary:  Change H2 --> SSH2 in those tavg_contents files that had not
              been updated to reflect the name change introduced in the
              ccsm_pop_2_1_20090911 tag
 
M           18834   input_templates/test_sample_tavg_contents
M           18834   input_templates/tx1v1_tavg_contents
M           18834   input_templates/tx0.1v2_tavg_contents

===============================================================================
Tag Creator: njn01
Tag Date:    30  October 2009
Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20091030
Tag Testing:  
            
Tag Summary:  1) move *.f90 files to $EXEDIR/ocn/source/f90, should they exist
              2) redirect pop2 buildnml messages to $CASE/Buildconf/pop2doc

M           18835   bld/pop2.cpl7.template
M           18835   input_templates/ocn.cfc.setup.csh
M           18835   input_templates/ocn.ecosys.setup.csh
M           18835   input_templates/ocn.cfc11.setup.csh
M           18835   input_templates/ocn.iage.setup.csh

===============================================================================
Tag Creator: njn01
Tag Date:    12  October 2009
Tag Name:    pop2/trunk_tags/ccsm_pop_2_1_20091012
Tag Testing:  
            
Tag Summary:  Eliminate LANL/CCSM branch definition conflict and fix minor
 problem with tripole grid settings in pop2_in_build.csh

M           18792   source/overflows.F90
M           18792   source/initial.F90
M           18792   source/iage_mod.F90
M           18792   source/cfc_mod.F90
M           18792   source/cfc11_mod.F90
M           18792   source/ecosys_mod.F90
M           18792   source/restart.F90
M           18792   bld/pop2.cpl7.template
M           18792   input_templates/ocn.iage.setup.csh
M           18792   input_templates/ocn.ecosys.setup.csh